# rust-haproxy

./: Cargo.toml
.cargo/: config.toml
haproxy/: Cargo.toml
haproxy/examples/traffic-mirror/: main.rs
haproxy/examples/traffic-mirror/config/: haproxy.cfg  spoe.cfg
haproxy/src/: lib.rs
spoa/: Cargo.toml
spoa/src/: accept.rs  agent.rs  conn.rs  error.rs  handshake.rs  lib.rs  msgs.rs  proto.rs  req.rs  server.rs  service.rs  state.rs  tcp.rs
spoa/src/conn/: builder.rs  conn.rs  mod.rs
spoa/src/handle/: mod.rs  pipeline.rs  simple.rs
spoa/src/runtime/: acker.rs  builder.rs  dispatch.rs  dispatcher.rs  mod.rs  processor.rs  runtime.rs
spoa/src/state/: connect.rs  handshake.rs  mod.rs  process.rs  state.rs
spoe/: Cargo.toml
spop/: Cargo.toml
spop/src/: action.rs  caps.rs  data.rs  error.rs  frame.rs  handler.rs  lib.rs  parser.rs  status.rs  varint.rs  version.rs
spop/src/data/: buf.rs  mod.rs  ty.rs  typed.rs  value.rs  varint.rs
spop/src/frame/: agent.rs  buf.rs  codec.rs  decode.rs  disconnect.rs  encode.rs  fragment.rs  framer.rs  frames.rs  handler.rs  haproxy.rs  kv.rs  metadata.rs  mod.rs  msg.rs  ty.rs
