[workspace]

members = ["haproxy", "spoa", "spoe", "spop"]

[workspace.dependencies]
anyhow = "1"
bitflags = "2.6"
bytes = "1.7"
derive_more = { version = "1", features = ["full"] }
futures = { version = "0.3", features = ["async-await"] }
hexplay = "0.3"
lazy_static = "1.5"
num_enum = "0.7"
parse-display = "0.10"
pin-project = "1.1"
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tower-service = "0.3"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.3"
