[workspace]
members = ["haproxy", "spoa", "spoe", "spop"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
bitflags = "2.6"
bytes = "1.7"
clap = "4.5"
console-subscriber = "0.4"
daemonize = "0.5"
dashmap = "6.1"
derive_more = { version = "1", features = ["full"] }
futures = "0.3"
hexplay = "0.3"
http = "1.1"
humantime = "2.1"
lazy_static = "1.5"
net2 = "0.2"
num_enum = "0.7"
parse-display = "0.10"
pin-project = "1.1"
rand = "0.8"
reqwest = "0.12"
rlimit = "0.10"
thiserror = "1.0"
tokio = "1"
tokio-util = "0.7"
tower = "0.5"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.3"
