[package]
name = "haproxy"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
haproxy-spoa = { version = "0.1", path = "../spoa" }
haproxy-spoe = { version = "0.1", path = "../spoe" }
haproxy-spop = { version = "0.1", path = "../spop" }

[dev-dependencies]
anyhow = "1.0"
bytes = "0.5"
structopt = "0.3"

tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

tokio = { version = "0.2", features = ["full"] }
