[package]
name = "haproxy"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
haproxy-spoa = { version = "0.1", path = "../spoa" }
haproxy-spoe = { version = "0.1", path = "../spoe" }
haproxy-spop = { version = "0.1", path = "../spop" }

[dev-dependencies]
anyhow.workspace = true
bytes.workspace = true
structopt.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-futures.workspace = true

tokio.workspace = true
tokio-util.workspace = true
