[package]
name = "haproxy"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
clap = ["haproxy-spop/clap"]

[dependencies]
haproxy-spoa = { version = "0.1", path = "../spoa" }
haproxy-spoe = { version = "0.1", path = "../spoe" }
haproxy-spop = { version = "0.1", path = "../spop" }

[dev-dependencies]
anyhow.workspace = true
bytes.workspace = true
clap = { workspace = true, features = ["derive"] }
console-subscriber.workspace = true
daemonize.workspace = true
http.workspace = true
humantime.workspace = true
net2.workspace = true
rand.workspace = true
reqwest = { workspace = true, features = [
    "brotli",
    "deflate",
    "gzip",
    "http3",
    "zstd",
] }
rlimit.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
tokio-util = { workspace = true, features = ["rt"] }
tower = { workspace = true, features = ["util"] }
tracing-futures.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[[example]]
name = "traffic-mirror"
required-features = ["clap"]
