[package]
name = "haproxy-spoa"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
edition = "2018"
description = """
Stream Processing Offload Agent.

A SPOA is a service that will receive info from a SPOE to offload the stream processing.
An agent manages several servers. It uses a backend to reference all of them.
By extension, these servers can also be called agents.
"""

[dependencies]
anyhow = "1.0"
bytes = "0.5"

tracing = "0.1"
tracing-futures = "0.2"

tokio = { version = "0.2", features = ["tcp"] }

haproxy-spop = { version = "0.1", path = "../spop" }