[package]
name = "haproxy-spoa"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
edition = "2018"
description = """
Stream Processing Offload Agent.

A SPOA is a service that will receive info from a SPOE to offload the stream processing.
An agent manages several servers. It uses a backend to reference all of them.
By extension, these servers can also be called agents.
"""

[dependencies]
bytes.workspace = true
derive_more.workspace = true
futures.workspace = true
hexplay.workspace = true
pin-project.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-service.workspace = true
tracing-futures.workspace = true
tracing.workspace = true

haproxy-spop = { version = "0.1", path = "../spop" }
