[package]
name = "haproxy-spop"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
edition = "2018"
description = """
Stream Processing Offload Protocol, used by SPOEs to talk to SPOA servers.

This protocol is used by engines to talk to agents.
"""

[dependencies]
bitflags = "1.0"
bytes = "0.5"
combine = "4.3"
derive_more = "*"

[dev-dependencies]
lazy_static = "1.4"
