[package]
name = "haproxy-spop"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
edition = "2018"
description = """
Stream Processing Offload Protocol, used by SPOEs to talk to SPOA servers.

This protocol is used by engines to talk to agents.
"""

[dependencies]
bitflags.workspace = true
bytes.workspace = true
derive_more.workspace = true
futures.workspace = true
hexplay.workspace = true
num_enum.workspace = true
parse-display.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util"] }
